# noob

./: Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs
src/utils/character/: list.rs  mod.rs  promotion.rs  rank.rs  skill.rs  skill_tree.rs
src/utils/lightcone/: list.rs  mod.rs  promotion.rs  rank.rs
src/utils/misc/: achievement.rs  avatar.rs  description.rs  element.rs  item.rs  mod.rs  nickname.rs  path.rs  property.rs
src/utils/relic/: list.rs  main_affix.rs  mod.rs  set.rs  sub_affix.rs
